# pulsar-x2a-linux

./: .gitignore  50-pulsar-x2a.rules  CLAUDE.md  README.md  pulsar_x2a.py  pulsar_x2a_gui.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: pulsar-mouse.desktop
src/pulsar_mouse/: __init__.py  base.py  cli.py  gui.py  hid.py
src/pulsar_mouse/drivers/: __init__.py  x2a.py  x2h.py  xlite_v4.py
udev/: 50-pulsar-mouse.rules
